--- a/WebAssets/index.html
+++ b/WebAssets/index.html
@@ -46,7 +46,9 @@
         request.onload = function() {
             if(this.status >= 200 && this.status < 400) {
                 //Request successful, payload in this.response
-                let data = JSON.parse(this.response);
+                //let data = JSON.parse(this.response);
+                console.log(this.response);
+                document.getElementById('network-stats').innerHTML = this.response;
             } else {
                 //Request succeeded but with bad status code
             }
