--- a/WebAssets/index.html
+++ b/WebAssets/index.html
@@ -18,17 +18,34 @@
         </div>
     </section>
     <section>
-        <article class="message container">
-            <div class="message-header is-info">
-                <p>Networking Statistics</p>
-            </div>
-            <div class="message-body" id="network-stats">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem. 
-            </div>
-        </article>    
+        <table class="table" id="network-stats-table">
+            <thead>
+                <tr>
+                    <th>Server Time</th>
+                    <th>connections</th>
+                    <th>MaxSendRate</th>
+                    <th>MaxRecvRate</th>
+                    <th>SendQueue</th>
+                    <th>ReceiveQueue</th>
+                    <th>SendBuffer</th>
+                    <th>ReceiveBuffer</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </section>
 </body>
 <script>
+    window._data = {
+        time: 0,
+        connections: 0,
+        maxSendRate: 0,
+        maxRecvRate: 0,
+        sendQueue: 0,
+        receiveQueue: 0,
+        sendBuffer: 0,
+        receiveBuffer: 0
+    }
     (function ready(fn) {
         if(document.readyState != 'loading') {
             fn();
@@ -38,7 +55,11 @@
     })(function() {
         //will be executed when document is ready
         console.log('test');
+        refresh();
+        setInterval(refresh, 5000);
 
+    });
+    let refresh = () => {
         var request = new XMLHttpRequest();
 
         request.open('GET', '/data', true);
@@ -48,7 +69,9 @@
                 //Request successful, payload in this.response
                 //let data = JSON.parse(this.response);
                 console.log(this.response);
-                document.getElementById('network-stats').innerHTML = this.response;
+                //document.getElementById('network-stats').innerHTML = this.response;
+                parseStats(data);
+                appendRow();
             } else {
                 //Request succeeded but with bad status code
             }
@@ -58,7 +81,38 @@
             }
 
         request.send();
+    }
+    let parseStats = data => {
+        let _split = data.split('\n');
+        window._data.time = _split[0].split(':')[1];
+        window._data.connections = _split[1].split(':')[1];
+        window._data.maxSendRate = _split[2].split(':')[1];
+        window._data.maxRecvRate = _split[3].split(':')[1];
+        window._data.sendQueue = _split[4].split(':')[1];
+        window._data.receiveQueue = _split[5].split(':')[1];
+        window._data.sendBuffer = _split[6].split(':')[1];
+        window._data.receiveBuffer = _split[7].split(':')[1];
+    }
+    let appendRow = () => {
+        let table = document.getElementById('network-stats-table');
 
-    });
+        let newRow = table.insertRow(0);
+        var c0 = newRow.insertCell(0);
+        var c1 = newRow.insertCell(1);
+        var c2 = newRow.insertCell(2);
+        var c3 = newRow.insertCell(3);
+        var c4 = newRow.insertCell(4);
+        var c5 = newRow.insertCell(5);
+        var c6 = newRow.insertCell(6);
+        var c7 = newRow.insertCell(7);
+        c0.innerHTML = window._data.time;
+        c1.innerHTML = window._data.connections;
+        c2.innerHTML = window._data.maxSendRate;
+        c3.innerHTML = window._data.maxRecvRate;
+        c4.innerHTML = window._data.sendQueue;
+        c5.innerHTML = window._data.receiveQueue;
+        c6.innerHTML = window._data.sendBuffer;
+        c7.innerHTML = window._data.receiveBuffer;
+    }
 </script>
 </html>
