added rtt and time

--- a/WebAssets/index.html
+++ b/WebAssets/index.html
@@ -139,7 +139,7 @@
         var c1 = newRow.insertCell(1);
         var c2 = newRow.insertCell(2);
 
-        c0.innerHTML = Date();
+        c0.innerHTML = data.time;
 
         c1.innerHTML = data.in;
         c2.innerHTML = data.out;
