Added Download page

--- a/WebAssets/status.html
+++ b/WebAssets/status.html
@@ -21,6 +21,7 @@
             <p class="subtitle" id="herostatus">
                 Trying to connect to server.
             </p>
+            <a class="subtitle" href="/">Back to homepage</p>
         </div>
     </section>
     <section>
