--- a/WebAssets/index.html
+++ b/WebAssets/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assembler Status Console</title>
+    <title>Assembler</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <section class="hero is-link is-fullheight">
+    <section class="hero is-info is-fullheight">
         <div class="hero-body">
             <div>
                 <p class="title">Welcome to Assembler!</p>
-                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/releases">Download the game here.</p>
+                <a class="subtitle" href="/download" target="_blank">Download the game here.</p>
                 <a class="subtitle" href="/status" target="_blank">Monitor the status.</p>
             </div>
         </div>
