fixed _target attribute

--- a/WebAssets/index.html
+++ b/WebAssets/index.html
@@ -12,8 +12,8 @@
         <div class="hero-body">
             <div>
                 <p class="title">Welcome to Assembler!</p>
-                <a class="subtitle" href="/download" target="_blank">Download the game here.</p>
-                <a class="subtitle" href="/status" target="_blank">Monitor the status.</p>
+                <a class="subtitle" href="/download">Download the game here.</p>
+                <a class="subtitle" href="/status">Monitor the status.</p>
             </div>
         </div>
     </section>
