--- a/WebAssets/status.html
+++ b/WebAssets/status.html
@@ -112,6 +112,7 @@
             if(this.status >= 200 && this.status < 400) {
                 //Request successful, payload in this.response
                 let data = JSON.parse(this.response);
+                console.log(data);
                 document.getElementById('herostatus').innerHTML = `All services are working properly. Players online: ${data.players}`;
                 //TODO: do something with data.players
                 //appendRow(data);
