fixed download page

--- a/WebAssets/download.html
+++ b/WebAssets/download.html
@@ -16,9 +16,10 @@
         <div class="hero-body">
             <div>
                 <p class="title">Assembler Downloads</p>
-                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/releases/download/v0.4/Assembler.Demo3Release.windows.build.zip" target="_blank">Windows</p>
-                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/releases/download/v0.4/AssemblerMac.app.zip" target="_blank">Mac</p>
-                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/archive/refs/tags/v0.4.zip">Source Code</a>
+                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/releases/download/v1.0/Assembler.FinalRelease.Windows.Build.zip" target="_blank">Windows</p>
+                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/releases/download/v1.0/AssemblerMac64bit.app.zip" target="_blank">Mac Intel 64-bit</p>                        
+                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler/releases/download/v1.0/AssemblerMacSilicon.app.zip" target="_blank">Mac Silicon</p>
+                <a class="subtitle" href="https://github.com/Capstone-Projects-2022-Spring/project-assembler">GitHub Repository</a>
                 <hr>
                 <a href="/" class="subtitle">Back to homepage</a>
             </div>
